--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width" />
   <title>Profile</title>
-  <link rel="stylesheet" href="https://rie-effort.github.io/engineer_practice/../css/style.css">
+  <link rel="stylesheet" href="https://rie-effort.github.io/engineer_practice/style.css">
 </head>
 <body>
   <header>
