--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </header>
   <main>
     <div id="mainvisual">
-      <img src="../images/5AB5616D-97BC-4DC0-A2B8-53C1AC9A5405.jpg" alt="ヘッダー画像">
+      <img src="https://github.com/rie-effort/engineer_practice/blob/main/5AB5616D-97BC-4DC0-A2B8-53C1AC9A5405.jpg?raw=true" alt="ヘッダー画像">
       <section id="about">
         <h2>About</h2>
         <div class="flex">
-          <h1><a href="index.html"><figure class="logo"><img src="../images/88617FC2-4785-4923-8F4B-9D96086F7C83.jpg" alt="ロゴ画像"></figure></a></h1>
+          <h1><a href="index.html"><figure class="logo"><img src="https://github.com/rie-effort/engineer_practice/blob/main/88617FC2-4785-4923-8F4B-9D96086F7C83.jpg?raw=true" alt="ロゴ画像"></figure></a></h1>
           <div class="right">
             <p class="title">テストテストテスト</p>
             <p class="text">
@@ -37,13 +37,13 @@
 <div class="flex">
   <ul>
     <li>
-    <img src="../images/993131DB-0FF2-4987-A586-451F6178AE4A.jpg" alt="画像1">
+    <img src="https://github.com/rie-effort/engineer_practice/blob/main/993131DB-0FF2-4987-A586-451F6178AE4A.jpg?raw=true" alt="画像1">
   </li>
   <li>
-    <img src="../images/B7A0D142-8BCA-4DA0-AD8E-EB87198E164E.jpg" alt="画像2">
+    <img src="https://github.com/rie-effort/engineer_practice/blob/main/B7A0D142-8BCA-4DA0-AD8E-EB87198E164E.jpg?raw=true" alt="画像2">
   </li>
   <li>
-    <img src="../images/FA75C8FD-3409-4526-87B6-BA8D3908CFD9.jpg" alt="画像3">
+    <img src="https://github.com/rie-effort/engineer_practice/blob/main/FA75C8FD-3409-4526-87B6-BA8D3908CFD9.jpg?raw=true" alt="画像3">
   </li>
 </ul>
 </div>
