--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width" />
-  <title>Profile</title>
-  <link rel="stylesheet" href="https://rie-effort.github.io/engineer_practice/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="https://rie-effort.github.io/engineer_practice/style.css">
 </head>
 <body>
   <header>
@@ -13,37 +13,48 @@
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
-        <li><a href="#Bicycle">Bicycle</a></li>
+        <li><a href="#works">Works</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <div id="mainvisual">
-      <img src="https://github.com/rie-effort/engineer_practice/blob/main/5AB5616D-97BC-4DC0-A2B8-53C1AC9A5405.jpg?raw=true" alt="ヘッダー画像">
+      <div class="image">
+      <img src="../images/bicycle-4398781_1280.jpg" alt="ヘッダー画像">
+      <p>Rie Nagashima's Portfolio</p>
+    </div>
       <section id="about">
         <h2>About</h2>
         <div class="flex">
-          <h1><a href="index.html"><figure class="logo"><img src="https://github.com/rie-effort/engineer_practice/blob/main/88617FC2-4785-4923-8F4B-9D96086F7C83.jpg?raw=true" alt="ロゴ画像"></figure></a></h1>
+          <h1><a href="index.html"><figure class="logo"><img src="https://rie-effort.github.io/engineer_practice/88617FC2-4785-4923-8F4B-9D96086F7C83.jpg" alt="ロゴ画像"></figure></a></h1>
           <div class="right">
-            <p class="title">テストテストテスト</p>
+            <p class="title">Rie Nagashima</p>
             <p class="text">
-              テキストテキストテキストテキスト
+              はじめまして。エンジニアのRieと申します。<br>
+              社会人4年目です。新卒では事務職に従事しておりましたが、<br>
+              Web開発を通じ人の役に立てるような仕事をしたいと思い、転職をいたしました。<br>
+              これまでテスト実行やWebサイト制作のサポートに携わってまいりました。<br>
+              今後は開発エンジニアにステップアップしたいと考えておりポートフォリオを作成しました。<br>
             </p>
           </div>
         </div>
       </section>
-      <section id="Bicycle">
-        <h2>Bicycle</h2>
+      <section id="Works">
+        <h2>Works</h2>
 <div class="flex">
   <ul>
     <li>
-    <img src="https://github.com/rie-effort/engineer_practice/blob/main/993131DB-0FF2-4987-A586-451F6178AE4A.jpg?raw=true" alt="画像1">
+      <a href="/Users/rie./Desktop/Portfolio5/html/index.html">
+      <img src="../images/mainvisual-pc.jpg" alt="画像1">
+    </a>
   </li>
   <li>
-    <img src="https://github.com/rie-effort/engineer_practice/blob/main/B7A0D142-8BCA-4DA0-AD8E-EB87198E164E.jpg?raw=true" alt="画像2">
+    <a href="/Users/rie./Desktop/Portforio4/html/index.html">
+    <img src="../images/image1.jpg" alt="画像2">
+  </a>
   </li>
   <li>
-    <img src="https://github.com/rie-effort/engineer_practice/blob/main/FA75C8FD-3409-4526-87B6-BA8D3908CFD9.jpg?raw=true" alt="画像3">
+    <img src="https://rie-effort.github.io/engineer_practice/FA75C8FD-3409-4526-87B6-BA8D3908CFD9.jpg" alt="画像3">
   </li>
 </ul>
 </div>
@@ -51,7 +62,19 @@
     </div>
   </main>
   <footer>
-    <p><small>© Rie 2023</small></p>
+    <div class="icon-container">
+    <a href="https://github.com/rie-effort" target="_blank">
+    <svg class="github-logo" width="40" height="40" viewBox="0 0 98 96" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#24292f"/>
+      </svg>
+    </a>
+    <a href="mailto:your-email@example.com">
+    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+    </svg>
+  </a>
+  </div>
+    <p><small>© Rie Nagashima 2024</small></p>
   </footer>
 </body>
 </html>
