--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <div id="mainvisual">
       <div class="image">
-      <img src="../images/bicycle-4398781_1280.jpg" alt="ヘッダー画像">
+      <img src="https://rie-effort.github.io/engineer_practice/bicycle-4398781_1280.jpg" alt="ヘッダー画像">
       <p>Rie Nagashima's Portfolio</p>
     </div>
       <section id="about">
@@ -45,7 +45,7 @@
   <ul>
     <li>
       <a href="/Users/rie./Desktop/Portfolio5/html/index.html">
-      <img src="../images/mainvisual-pc.jpg" alt="画像1">
+      <img src="https://rie-effort.github.io/engineer_practice/mainvisual-pc.jpg" alt="画像1">
     </a>
   </li>
   <li>
