--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="https://rie-effort.github.io/engineer_practice/style.css">
+  <link rel="stylesheet" href="https://rie-effort.github.io/engineer_practice/style.css">
 </head>
 <body>
   <header>
