--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </li>
   <li>
     <a href="/Users/rie./Desktop/Portforio4/html/index.html">
-    <img src="../images/image1.jpg" alt="画像2">
+    <img src="https://rie-effort.github.io/engineer_practice/image1.jpg" alt="画像2">
   </a>
   </li>
   <li>
