--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="flex">
   <ul>
     <li>
-      <a href="/Users/rie./Desktop/Portfolio5/html/index.html">
+      <a href="https://rie-effort.github.io/engineer_practice3/">
       <img src="https://rie-effort.github.io/engineer_practice/mainvisual-pc.jpg" alt="画像1">
     </a>
   </li>
