--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </a>
   </li>
   <li>
-    <a href="/Users/rie./Desktop/Portforio4/html/index.html">
+    <a href="https://rie-effort.github.io/engineer_practice2/">
     <img src="https://rie-effort.github.io/engineer_practice/image1.jpg" alt="画像2">
   </a>
   </li>
